common/networking/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dataware-tools
spec:
  hosts:
    - "*"
  gateways:
    - dataware-tools-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /callback
      redirect:
        uri: /launcher
